# react-laboratory

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/add-experiment/: SKILL.md
.claude/skills/review-react/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: react.instructions.md
.github/prompts/: add-experiment.prompt.md  review-react.prompt.md
arc/: overview.md
docs/: architecture.md  experiment-guide.md  getting-started.md  library-notes.md
investor-agents/agents/: goto-tatsuya.md  testa.md
investors/goto-tatsuya/: analysis.md
investors/testa/: analysis.md
src/: App.css  App.tsx  index.css
src/components/: ExperimentCard.tsx
src/experiments/: registry.ts
src/experiments/counter/: index.tsx
src/experiments/currency-chart/: index.tsx  recharts-knowhow.md  styles.css
src/experiments/currency-chart-window-lab/: from-scratch.md  index.tsx  recharts.md  styles.css
src/experiments/currency-chart-window-lab-scratch/: data.ts  from-scratch.md  index.tsx  react-object-dependencies.md  styles.css  types.ts
src/experiments/daypicker-laboratory/: index.tsx  styles.css
src/experiments/dialog-laboratory/: index.tsx  styles.css
src/experiments/financial-chart/: data.ts  index.tsx  styles.css  themes.ts
src/experiments/fx-chart-lab/: CandlestickBar.tsx  ChartControls.tsx  FxChart.tsx  PromptPanel.tsx  data.ts  index.tsx  styles.css  themes.ts
src/pages/: ExperimentPage.tsx  HomePage.tsx
wasm/sma-benchmark/: Cargo.toml
wasm/sma-benchmark/src/: lib.rs
(+77 files in other folders)
